kubernetes/infrastructure/controllers/cilium/cilium-configs.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "lock-down-node"
spec:
  description: Allow a minimum set of required ports on nodes
  nodeSelector:
    matchLabels:
      kubernetes.io/os: linux
  ingress:
    - fromEntities:
        - all
    - toPorts:
        - ports:
            # Kubernetes API
            - port: "6443"
              protocol: TCP
            # Host SSH
            - port: "22"
              protocol: TCP
            # etcd
            - port: "2379"
              protocol: TCP
            # Cilium health check
            - port: "4240"
              protocol: TCP
            # VXLAN which we're not using
            # - port: "8472"
            #   protocol: UDP
---
